--- a/arch/arm64/configs/kiwi-64_defconfig
+++ b/arch/arm64/configs/kiwi-64_defconfig
@@ -1921,6 +1921,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB1351_USB_CHARGER is not set
 # CONFIG_SMB135X_CHARGER is not set
 CONFIG_SMB1360_CHARGER_FG=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_SMB358_CHARGER is not set
 # CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
